--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,5 @@
-include ./mixins.pug
-
 <!DOCTYPE html>
-html(lang="en")
+html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -9,7 +7,10 @@ html(lang="en")
     title Portfolio | main page
   body
     .wrapper
-      .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+      include components/parallax
+      include components/main-section
+      include components/about-section
+      include components/skills-section
+      include components/works-section
+      include components/feedback-section
+      include components/footer
