--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -14,6 +14,7 @@ html {
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -72,7 +73,7 @@ p {
   padding: 0;
 }
 
-button[type="button"] {
+button[type='button'] {
   cursor: pointer;
   background-color: transparent;
 }
