Add content in about section

--- a/src/components/about-section.pug
+++ b/src/components/about-section.pug
@@ -1,1 +1,10 @@
 section#about.about-section
+  .about-section__grid
+    .about-section__avatar
+      include avatar
+    .about-section__author-info
+      include author-info
+    .about-section__profile
+      include profile
+    .about-section__remark
+      include remark
