--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 1779px;
+  height: 1850px;
+  background-image: url('~images/content/black-background.png');
   &__layer {
     position: absolute;
     &_background {
