--- a/src/styles/fonts.pcss
+++ b/src/styles/fonts.pcss
@@ -28,6 +28,13 @@
 
 @font-face {
   font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../fonts/OpenSans-Italic.ttf');
+}
+
+@font-face {
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
   src: url('../fonts/OpenSans-Light.ttf');
