--- a/src/styles/blocks/skills-section.pcss
+++ b/src/styles/blocks/skills-section.pcss
@@ -1,6 +1,36 @@
 .skills-section {
+  position: relative;
   width: 100%;
-  height: 1021px;
+  padding: 150px 0;
   background-image: url('~images/content/wood-background.png');
   background-size: cover;
+  &__title {
+    margin-left: 664px;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+  }
+  &__description {
+    margin-top: 59px;
+    margin-left: 664px;
+    padding-bottom: 48px;
+    max-width: 590px;
+    color: white;
+    font-family: 'Open Sans';
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 30px;
+    opacity: 0.5;
+  }
+  &__widgets {
+    margin-top: 58px;
+    margin-left: 788px;
+  }
+  &__image {
+    position: absolute;
+    left: -20px;
+    bottom: -91px;
+    width: 682px;
+  }
 }
