--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -1,5 +1,19 @@
 include socials
 
 footer.footer
-  include menu
-  +socials('bordered')
+  .footer__grid
+    .footer__year &copy; 2019
+    .footer__author
+      p Татьяна
+      p Курочкина
+    .footer__site
+      p Личный сайт
+      p веб-разработчика
+    .footer__menu
+      include menu
+    .footer__site-info.footer-text Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool
+    .footer__socials
+      +socials('bordered', true)
+    .footer__quote
+      .footer__quote-text.footer-text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
+      .footer__quote-author Martin Golding
