--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -3,10 +3,15 @@
   align-items: center;
   &__item {
     &:not(:last-child) {
-      margin-right: 40px;
+      margin-right: 18px;
     }
   }
   &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
     opacity: 0.3;
     transition: opacity 0.2s ease;
     &:hover {
@@ -23,6 +28,23 @@
     }
     &_github {
       width: 28px;
+    }
+  }
+  &_bordered {
+    .socials__link {
+      border: 1px solid white;
+      border-radius: 50%;
+    }
+    .socials__icon {
+      &_insta {
+        width: 20px;
+      }
+      &_vk {
+        width: 25px;
+      }
+      &_github {
+        width: 22px;
+      }
     }
   }
 }
