Add styles for scroll in main-section

--- a/src/components/main-section.pug
+++ b/src/components/main-section.pug
@@ -1,3 +1,4 @@
 section#main.main-section
   include header
   a.main-section__scroll(href="#about") Скролл
+    +icon('scroll', 'main-section__scroll-icon')
