--- a/src/styles/blocks/works-section.pcss
+++ b/src/styles/blocks/works-section.pcss
@@ -1,4 +1,13 @@
 .works-section {
+  padding: 205px 160px;
   width: 100%;
-  height: 1086px;
+  &__title {
+    color: #2b3948;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 48px;
+  }
+  &__body {
+    margin-top: 92px;
+  }
 }
