--- a/src/styles/blocks/feedback-section.pcss
+++ b/src/styles/blocks/feedback-section.pcss
@@ -1,5 +1,54 @@
 .feedback-section {
+  position: relative;
   width: 100%;
   height: 1375px;
-  background-color: gray;
+  background-image: url('~images/content/autumn.png');
+  background-size: cover;
+  background-position: center center;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(to right, #1c2024 0%, #1c2023 42%, rgba(27, 31, 34, 0) 100%);
+    opacity: 0.9;
+  }
+  &__reviews {
+    margin-bottom: 200px;
+  }
+  &__content {
+    position: relative;
+    padding: 150px 160px 166px;
+    z-index: 1;
+  }
+  &__leaf {
+    position: absolute;
+    z-index: 1;
+    &:nth-child(1) {
+      bottom: 165px;
+      right: 139px;
+      width: 412px;
+      height: 248px;
+    }
+    &:nth-child(2) {
+      top: 50%;
+      right: 179px;
+      width: 109px;
+      height: 84px;
+    }
+    &:nth-child(3) {
+      top: 451px;
+      right: 354px;
+      width: 132px;
+      height: 140px;
+    }
+    &:nth-child(4) {
+      top: -168px;
+      right: -220px;
+      width: 616px;
+      height: 442px;
+    }
+  }
 }
