--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -7,6 +7,7 @@
   background-image: url('~images/content/black-background.png');
   &__layer {
     position: absolute;
+    will-change: transform;
     &_background {
       top: 0;
       left: 0;
