Add reviews section and color variables

--- a/src/components/input.pug
+++ b/src/components/input.pug
@@ -4,4 +4,4 @@ mixin input(type, label, className, icon)
   .input
     input.input__control(type=type)
     +icon(icon, 'input__icon')
-    .input__label #{label}
+    label.input__label #{label}
