--- a/src/components/textarea.pug
+++ b/src/components/textarea.pug
@@ -4,4 +4,4 @@ mixin textarea(label, className, icon)
   .textarea
     textarea.textarea__control
     +icon(icon, 'textarea__icon')
-    .textarea__label #{label}
+    label.textarea__label #{label}
