--- a/src/components/works-preview.pug
+++ b/src/components/works-preview.pug
@@ -1,5 +1,9 @@
+include arrow-button
+
 .works-preview
   .works-preview__current
   .works-preview__list
   .works-preview__number 2
   .works-preview__controls
+    +arrow-button('prev', 'square', 'gray')
+    +arrow-button('next', 'square', 'gray')
