--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding: 81px 0 83px;
-  background-color: #1b1f22;
+  background-color: $dark-gray;
   &__grid {
     display: grid;
     grid-template-columns: 170px 220px 460px 470px;
