--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -41,7 +41,7 @@
         left: 0;
         right: 0;
         height: 670px;
-        background-image: linear-gradient(to top, #1b1f22 0%, rgba(27, 31, 34, 0) 100%);
+        background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
       }
       &::after {
         content: '';
@@ -50,7 +50,7 @@
         left: 0;
         right: 0;
         height: 754px;
-        background-image: linear-gradient(to top, #1b1f22 0%, rgba(27, 31, 34, 0) 100%);
+        background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
       }
     }
   }
