--- a/src/styles/blocks/remark.pcss
+++ b/src/styles/blocks/remark.pcss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 10px;
     left: -55px;
-    color: #ff0000;
+    color: red;
     font-size: 48px;
     font-style: italic;
     line-height: 30px;
