--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -16,6 +16,9 @@
     transition: opacity 0.2s ease;
     &:hover {
       opacity: 1;
+      .socials__icon {
+        fill: $accent-color;
+      }
     }
   }
   &__icon {
@@ -34,6 +37,9 @@
     .socials__link {
       border: 1px solid white;
       border-radius: 50%;
+      &:hover {
+        border-color: $accent-color;
+      }
     }
     .socials__icon {
       &_insta {
