--- a/src/styles/blocks/work-info.pcss
+++ b/src/styles/blocks/work-info.pcss
@@ -8,7 +8,7 @@
   }
   &__title {
     margin-top: 50px;
-    color: #2d3c4e;
+    color: $text-color;
     font-size: 30px;
     font-weight: 700;
     line-height: 48px;
@@ -16,7 +16,7 @@
   &__description {
     margin-top: 44px;
     opacity: 0.7;
-    color: #2b3948;
+    color: $secondary-text-color;
     font-size: 16px;
     font-weight: 600;
     line-height: 30px;
@@ -25,17 +25,17 @@
     display: flex;
     align-items: center;
     margin-top: 50px;
-    color: #4b6fd7;
+    color: $link-color;
     cursor: pointer;
     transition: opacity 0.2s ease;
     &:hover {
-      opacity: 0.7;
+      text-decoration: underline;
     }
   }
   &__link-icon {
     width: 15px;
     height: 15px;
-    fill: #4b6fd7;
+    fill: $link-color;
   }
   &__link-text {
     margin-left: 20px;
