--- a/src/styles/blocks/works-section.pcss
+++ b/src/styles/blocks/works-section.pcss
@@ -2,7 +2,7 @@
   padding: 205px 160px;
   width: 100%;
   &__title {
-    color: #2b3948;
+    color: $secondary-text-color;
     font-size: 36px;
     font-weight: 700;
     line-height: 48px;
