--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -13,9 +13,10 @@
     font-size: 16px;
     text-decoration: none;
     opacity: 0.7;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.2s ease, color 0.2s ease;
     &:hover {
       opacity: 1;
+      color: $accent-color;
     }
   }
 }
