--- a/src/styles/blocks/widget.pcss
+++ b/src/styles/blocks/widget.pcss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 134px;
   height: 134px;
-  border: 9px solid #363636;
+  border: 3px solid rgba(244, 244, 244, 0.1);
   border-radius: 50%;
   color: rgba(255, 255, 255, 0.5);
   font-size: 18px;
