--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -11,7 +11,7 @@
     position: absolute;
     right: 0;
     bottom: 160px;
-    color: #f0f0f0;
+    color: $extra-light-gray;
     font-size: 400px;
     font-weight: 900;
     line-height: 0.78;
@@ -29,8 +29,5 @@
     position: absolute;
     left: 975px;
     bottom: 60px;
-    width: 50px;
-    height: 100px;
-    background-color: #2d3c4e;
   }
 }
