Add vue widgets for skills

--- a/src/styles/blocks/skills-section.pcss
+++ b/src/styles/blocks/skills-section.pcss
@@ -14,7 +14,6 @@
   &__description {
     margin-top: 59px;
     margin-left: 664px;
-    padding-bottom: 48px;
     max-width: 590px;
     color: white;
     font-family: 'Open Sans';
@@ -24,7 +23,7 @@
     opacity: 0.5;
   }
   &__widgets {
-    margin-top: 58px;
+    padding-top: 96px;
     margin-left: 788px;
   }
   &__image {
