--- a/src/index.pug
+++ b/src/index.pug
@@ -14,3 +14,5 @@ html(lang="ru")
       include components/works-section
       include components/feedback-section
       include components/footer
+
+    include templates/entry
