--- a/src/components/works-section.pug
+++ b/src/components/works-section.pug
@@ -1,4 +1,4 @@
 section#works.works-section
   .works-section__title Мои работы
   .works-section__body
-    include works-carousel
+    #slider-component
