--- a/src/styles/blocks/slider-info.pcss
+++ b/src/styles/blocks/slider-info.pcss
@@ -1,4 +1,4 @@
-.work-info {
+.slider-info {
   &__tags {
     display: flex;
     align-items: center;
@@ -26,6 +26,7 @@
     align-items: center;
     margin-top: 50px;
     color: $link-color;
+    text-decoration: none;
     cursor: pointer;
     transition: opacity 0.2s ease;
     &:hover {
