--- a/src/styles/blocks/arrow-button.pcss
+++ b/src/styles/blocks/arrow-button.pcss
@@ -4,6 +4,8 @@
   align-items: center;
   width: 50px;
   height: 50px;
+  border: none;
+  outline: none;
   cursor: pointer;
   &_transparent {
     background: none;
