add carousel in reviews

--- a/src/components/feedback-section.pug
+++ b/src/components/feedback-section.pug
@@ -3,6 +3,6 @@ section#feedback.feedback-section
     +image(`content/leaf${index}.png`, 'feedback-section__leaf')
   .feedback-section__content
     .feedback-section__reviews
-      include reviews
+      #reviews-container
     .feedback-section__form
       include feedback-form
