--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -15,5 +15,5 @@ footer.footer
     .footer__socials
       +socials('bordered', true)
     .footer__quote
-      .footer__quote-text.footer-text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
-      .footer__quote-author Martin Golding
+      blockquote.footer__quote-text.footer-text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
+      cito.footer__quote-author Martin Golding
