--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -17,9 +17,14 @@
   &__prev-button {
     margin-right: 30px;
   }
+  &__body {
+    margin-top: 97px;
+    width: 1000px;
+    overflow: hidden;
+  }
   &__list {
     display: flex;
-    margin-top: 97px;
+    transition: transform 0.3s ease;
   }
   &__item {
     &:first-child {
