--- a/src/components/parallax.pug
+++ b/src/components/parallax.pug
@@ -11,3 +11,5 @@ include ../mixins
     +image('content/train.png', 'parallax__image')
   .parallax__layer.parallax__layer_ground(data-speed="4")
     +image('content/ground.png', 'parallax__image')
+  .parallax__layer.parallax__layer_first-gradient(data-speed="4")
+  .parallax__layer.parallax__layer_second-gradient(data-speed="4")
