--- a/src/styles/blocks/works-section.pcss
+++ b/src/styles/blocks/works-section.pcss
@@ -1,6 +1,7 @@
 .works-section {
   padding: 205px 160px;
   width: 100%;
+  background-color: white;
   &__title {
     color: $secondary-text-color;
     font-size: 36px;
