--- a/src/styles/blocks/about-section.pcss
+++ b/src/styles/blocks/about-section.pcss
@@ -1,10 +1,13 @@
 .about-section {
   position: relative;
-  height: 824px;
   width: 100%;
+  padding-top: 170px;
+  padding-bottom: 270px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url('~images/content/black-background.png');
+  background-size: cover;
   &__grid {
     display: grid;
     grid-template-rows: 200px 100px;
