--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -3,8 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 1850px;
-  background-image: url('~images/content/black-background.png');
+  height: calc(110vh);
   &__layer {
     position: absolute;
     will-change: transform;
@@ -12,46 +11,54 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 938px;
+      height: 90vh;
     }
     &_title {
-      top: 490px;
+      top: 48vh;
       left: 50%;
       margin-left: -215px;
     }
     &_subtitle {
-      top: 492px;
+      top: 48vh;
       right: 50%;
       margin-right: 275px;
     }
     &_train {
       left: 0;
       right: 0;
-      top: 522px;
+      top: 50vh;
     }
     &_ground {
-      position: relative;
-      top: 955px;
+      top: 85vh;
       left: 0;
       right: 0;
-      &::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 670px;
-        background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
+      .parallax__image {
+        height: 25vh;
+        object-fit: fill;
       }
       &::after {
         content: '';
         position: absolute;
-        bottom: 0;
         left: 0;
         right: 0;
-        height: 754px;
-        background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
+        top: 99%;
+        height: 50vh;
+        background-color: $dark-gray;
       }
+    }
+    &_first-gradient {
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 40vh;
+      background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
+    }
+    &_second-gradient {
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 45vh;
+      background-image: linear-gradient(to top, $dark-gray 0%, rgba(27, 31, 34, 0) 100%);
     }
   }
   &__image {
