--- a/src/styles/blocks/about-section.pcss
+++ b/src/styles/blocks/about-section.pcss
@@ -1,7 +1,7 @@
 .about-section {
   position: relative;
   width: 100%;
-  padding-top: 170px;
+  margin-top: 20vh;
   padding-bottom: 270px;
   display: flex;
   justify-content: center;
