--- a/src/styles/blocks/main-section.pcss
+++ b/src/styles/blocks/main-section.pcss
@@ -15,6 +15,9 @@
     font-weight: 600;
     line-height: 30px;
     text-decoration: none;
+    @include tablets {
+      display: none;
+    }
   }
   &__scroll-icon {
     fill: white;
