--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -3,37 +3,52 @@
   top: 0;
   left: 0;
   right: 0;
-  height: calc(110vh);
+  height: 120vh;
   &__layer {
     position: absolute;
     will-change: transform;
-    &_background {
+    &_sky {
       top: 0;
       left: 0;
       right: 0;
-      height: 90vh;
+      height: 53vh;
+    }
+    &_mountains {
+      top: 30vh;
+      left: 0;
+      right: 0;
+      height: 50vh;
     }
     &_title {
-      top: 48vh;
+      top: 40vh;
       left: 50%;
       margin-left: -215px;
+      @include desktop {
+        left: 45%;
+        margin-left: 0;
+      }
     }
     &_subtitle {
-      top: 48vh;
+      top: 40vh;
       right: 50%;
       margin-right: 275px;
+      @include desktop {
+        right: 55%;
+        margin-right: 60px;
+      }
     }
     &_train {
       left: 0;
       right: 0;
-      top: 50vh;
+      top: 42vh;
+      height: 48vh;
     }
     &_ground {
-      top: 85vh;
+      top: 80vh;
       left: 0;
       right: 0;
+      height: 40vh;
       .parallax__image {
-        height: 25vh;
         object-fit: fill;
       }
       &::after {
@@ -65,5 +80,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
   }
 }
