--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -2,6 +2,7 @@
   &__list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
   &__item {
     &:not(:last-child) {
@@ -10,6 +11,10 @@
       @include desktop {
         margin-right: 5vw;
       }
+      @include phones {
+        margin-right: 0;
+        flex-basis: 50%;
+      }
     }
   }
   &__link {
@@ -17,10 +22,9 @@
     font-size: 16px;
     white-space: nowrap;
     text-decoration: none;
-    opacity: 0.7;
-    transition: opacity 0.2s ease, color 0.2s ease;
+    line-height: 2.5;
+    transition: color 0.2s ease;
     &:hover {
-      opacity: 1;
       color: $accent-color;
     }
   }
