--- a/src/styles/blocks/review-author.pcss
+++ b/src/styles/blocks/review-author.pcss
@@ -6,6 +6,10 @@
     margin-right: 31px;
     border-radius: 50%;
     overflow: hidden;
+    @include phones {
+      width: 50px;
+      height: 50px;
+    }
   }
   &__avatar-image {
     width: 100%;
@@ -17,6 +21,12 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 42px;
+    @include desktop {
+      font-size: 16px;
+    }
+    @include phones {
+      line-height: 1.3;
+    }
   }
   &__position {
     opacity: 0.3;
@@ -24,5 +34,11 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 26px;
+    @include desktop {
+      font-size: 14px;
+    }
+    @include phones {
+      line-height: 2;
+    }
   }
 }
