--- a/src/styles/blocks/textarea.pcss
+++ b/src/styles/blocks/textarea.pcss
@@ -14,6 +14,9 @@
     border-bottom: 1px solid $light-gray;
     outline: none;
     transition: border 0.2s ease;
+    @include desktop {
+      font-size: 14px;
+    }
     &:focus {
       border-bottom-color: $accent-color;
     }
@@ -43,6 +46,9 @@
     transform: translateY(-50%);
     transition: transform 0.2s ease;
     z-index: -1;
+    @include desktop {
+      font-size: 14px;
+    }
   }
   &__control:focus ~ &__label {
     transform: translateY(-200%);
