--- a/src/styles/blocks/slider-thumbs.pcss
+++ b/src/styles/blocks/slider-thumbs.pcss
@@ -1,11 +1,10 @@
 .slider-thumbs {
   display: flex;
   align-items: stretch;
-  width: 100%;
   height: 100px;
   &__item {
     position: relative;
-    width: 25%;
+    width: 178px;
     flex-shrink: 0;
     cursor: pointer;
     &::after {
