--- a/src/styles/blocks/slider-display.pcss
+++ b/src/styles/blocks/slider-display.pcss
@@ -1,36 +1,73 @@
 .slider-display {
   position: relative;
-  width: 1135px;
-  height: 550px;
+  width: 100%;
+  height: 30vw;
+  @include desktop {
+    height: 46vw;
+  }
+  @include phones {
+    height: 58vw;
+  }
+  &::after {
+    content: attr(data-index);
+    position: absolute;
+    right: 0;
+    bottom: 160px;
+    color: $extra-light-gray;
+    font-size: 22vw;
+    font-weight: 900;
+    line-height: 0.78;
+    @include desktopHd {
+      bottom: 130px;
+    }
+    @include desktop {
+      right: -6vw;
+      font-size: 39vw;
+    }
+    @include tablets {
+      right: -6vw;
+      font-size: 30vw;
+    }
+    @include phones {
+      display: none;
+    }
+  }
   &__current-slide {
-    width: 975px;
+    position: relative;
+    width: calc(100% - 10vw);
     height: 100%;
+    z-index: 1;
+    @include phones {
+      width: 100%;
+    }
   }
   &__current-image {
     width: 100%;
     object-fit: cover;
     object-position: top center;
   }
-  &__number {
-    position: absolute;
-    right: 0;
-    bottom: 160px;
-    color: $extra-light-gray;
-    font-size: 400px;
-    font-weight: 900;
-    line-height: 0.78;
-    z-index: -1;
-  }
   &__thumbs {
     position: absolute;
-    right: 160px;
+    right: 10vw;
     bottom: 60px;
-    width: 710px;
     height: 100px;
+    z-index: 1;
+    @include desktopHd {
+      bottom: 30px;
+    }
   }
   &__buttons {
     position: absolute;
-    left: 975px;
+    left: calc(100% - 10vw);
     bottom: 60px;
+    z-index: 1;
+    @include desktopHd {
+      bottom: 30px;
+    }
+    @include phones {
+      left: auto;
+      right: 0;
+      bottom: 0;
+    }
   }
 }
