--- a/src/styles/blocks/slider-tags.pcss
+++ b/src/styles/blocks/slider-tags.pcss
@@ -10,5 +10,11 @@
     font-weight: 600;
     line-height: 48px;
     border-radius: 24px;
+    @include phones {
+      padding: 0 18px;
+      font-size: 13px;
+      line-height: 40px;
+      border-radius: 20px;
+    }
   }
 }
