--- a/src/styles/blocks/works-slider.pcss
+++ b/src/styles/blocks/works-slider.pcss
@@ -1,10 +1,24 @@
 .works-slider {
   display: flex;
+  @include desktop {
+    flex-direction: column;
+  }
   &__display {
-    flex-shrink: 0;
-    width: 1135px;
+    flex-grow: 1;
   }
   &__info {
-    flex-grow: 1;
+    width: 345px;
+    flex-shrink: 0;
+    @include desktop {
+      align-self: center;
+      width: 600px;
+      margin-top: 60px;
+    }
+    @include tablets {
+      width: 450px;
+    }
+    @include phones {
+      padding: 0 30px;
+    }
   }
 }
