--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -4,6 +4,11 @@
     margin-bottom: 50px;
     font-size: 24px;
     font-weight: 700;
+    @include desktop {
+      margin-bottom: 30px;
+      text-align: center;
+      font-size: 18px;
+    }
   }
   &__list {
     display: flex;
@@ -11,7 +16,7 @@
   }
   &__item {
     &:not(:last-child) {
-      margin-right: 68px;
+      margin-right: 3.5vw;
     }
   }
 }
