add resonsiveness for about section

--- a/src/styles/blocks/remark.pcss
+++ b/src/styles/blocks/remark.pcss
@@ -3,9 +3,25 @@
   color: white;
   font-family: 'Open Sans';
   font-size: 16px;
+  font-weight: 400;
   font-style: italic;
   line-height: 30px;
   opacity: 0.5;
+
+  @include desktop() {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  @include tablets() {
+    margin: 0 auto;
+    max-width: 500px;
+    text-align: center;
+  }
+  @include phones() {
+    text-align: left;
+  }
+
   &::after {
     content: '*';
     position: absolute;
