--- a/src/styles/blocks/about-section.pcss
+++ b/src/styles/blocks/about-section.pcss
@@ -8,17 +8,87 @@
   align-items: center;
   background-image: url('~images/content/black-background.png');
   background-size: cover;
+
+  @include desktop() {
+    margin: 20vh auto 0;
+    max-width: 1000px;
+    padding: 0 40px 147px;
+  }
+
+  @include phones() {
+    margin: 100px auto;
+    padding: 0 30px;
+  }
+
   &__grid {
     display: grid;
+    grid-template-areas: 'avatar info' 'profile remark';
     grid-template-rows: 200px 100px;
     grid-template-columns: 300px 540px;
     grid-column-gap: 158px;
     grid-row-gap: 79px;
+    
+    @include desktop() {
+      width: 100%;
+      grid-template-rows: auto auto;
+      grid-template-columns: 250px 1fr;
+      grid-column-gap: 8vw;
+      grid-row-gap: 46px;
+    }
+    @include tablets() {
+      grid-template-areas: 'avatar' 'profile' 'info' 'remark';
+      grid-template-rows: auto;
+      grid-template-columns: 1fr;
+      grid-column-gap: 0;
+      grid-row-gap: 0;
+    }
   }
   &__avatar {
+    grid-area: avatar;
     justify-self: end;
+
+    @include desktop() {
+      justify-self: start;
+    }
+
+    @include tablets() {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
   }
   &__profile {
+    grid-area: profile;
     justify-self: end;
+  
+    @include desktop() {
+      width: 100%;
+    }
+
+    @include tablets() {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-top: 25px;
+    }
+  }
+
+  &__author-info {
+    grid-area: info;
+  
+    @include tablets() {
+      margin-top: 50px;
+    }
+    @include phones() {
+      margin-top: 30px;
+    }
+  }
+
+  &__remark {
+    grid-area: remark;
+
+    @include tablets() {
+      margin-top: 50px;
+    }
   }
 }
