--- a/src/styles/blocks/author-info.pcss
+++ b/src/styles/blocks/author-info.pcss
@@ -1,4 +1,10 @@
 .author-info {
+  @include tablets() {
+    margin: 0 auto;
+    max-width: 500px;
+    text-align: center;
+  }
+
   &__intro {
     margin-bottom: 20px;
     color: white;
@@ -6,6 +12,14 @@
     font-weight: 600;
     line-height: 30px;
     opacity: 0.5;
+
+    @include desktop() {
+      font-size: 14px;
+      line-height: 24px;
+    }
+    @include phones() {
+      text-align: left;
+    }
   }
   &__name {
     margin-bottom: 24px;
@@ -13,12 +27,30 @@
     font-size: 36px;
     font-weight: 700;
     line-height: 48px;
+
+    @include desktop() {
+      font-size: 30px;
+    }
+    @include phones() {
+      line-height: 36px;
+    }
+    @include phones() {
+      text-align: left;
+    }
   }
   &__text {
     color: white;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 30px;
     opacity: 0.5;
+
+    @include desktop() {
+      font-size: 14px;
+      line-height: 24px;
+    }
+    @include phones() {
+      text-align: left;
+    }
   }
 }
