--- a/src/styles/blocks/avatar.pcss
+++ b/src/styles/blocks/avatar.pcss
@@ -3,6 +3,12 @@
   height: 200px;
   border-radius: 50%;
   overflow: hidden;
+
+  @include desktop() {
+    width: 172px;
+    height: 172px;
+  }
+
   &__image {
     width: 100%;
     object-fit: cover;
