--- a/src/styles/blocks/skills-section.pcss
+++ b/src/styles/blocks/skills-section.pcss
@@ -1,15 +1,19 @@
 .skills-section {
   position: relative;
-  display: flex;
-  flex-direction: column;
   width: 100%;
   padding: 150px 0;
   background-image: url('~images/content/wood-background.png');
   background-size: cover;
-  overflow: hidden;
 
   @include desktop {
     padding: 117px 0 44vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  @include phones {
+    padding: 97px 30px 260px;
+    align-items: flex-start;
   }
   &__title {
     margin-left: 37vw;
@@ -27,6 +31,10 @@
       font-size: 30px;
       line-height: 36px;
       text-align: center;
+    }
+    @include phones {
+      align-self: flex-start;
+      text-align: left;
     }
   }
   &__description {
@@ -51,11 +59,15 @@
       text-align: center;
       line-height: 24px;
     }
+    @include phones {
+      align-self: flex-start;
+      text-align: left;
+    }
   }
   &__widgets {
     align-self: center;
     padding-top: 96px;
-    margin-left: 44vw;
+    margin-left: calc(44vw);
     @include desktopHd {
       margin-left: 35vw;
     }
