--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -9,7 +9,7 @@
       margin-right: 60px;
 
       @include desktop {
-        margin-right: 5vw;
+        margin-right: 2vw;
       }
       @include phones {
         margin-right: 0;
@@ -27,7 +27,7 @@
     &:hover {
       color: $accent-color;
     }
-    @include tablets {
+    @include desktop {
       font-size: 14px;
     }
   }
