--- a/src/styles/blocks/main-subtitle.pcss
+++ b/src/styles/blocks/main-subtitle.pcss
@@ -5,4 +5,14 @@
   line-height: 30px;
   text-align: right;
   opacity: 0.4;
+
+  @include desktop() {
+    font-size: 16px;
+    text-align: center;
+  }
+
+  @include phones() {
+    font-size: 14px;
+    line-height: 24px;
+  }
 }
